# old-timedata

./: .gitignore  Makefile  README.md  appveyor.yml  benchmarks.py  catch-compiler-error.txt  generate.py  generate_files.py  make_generated_classes.py  make_generated_classes.sh  run_all.sh  run_all_benchmarks.sh  run_python_tests.sh  setup.cfg  setup.py  test.py  timedata.pyx  tox.ini
doc/: DeveloperHowTo.md  FAQ.md  HowTo.md  Why.md
results/: README.md
results/lists/: 20160712-012809-o3.json  20160712-012842-o3-fast-math.json  20160712-012905-o3-lto.json  20160712-012942-o3-omit-frame-pointer.json
scripts/: make_generated_classes.py  new_templates.py  run_all.sh  split_parts.py  template.py  template_variables.py
scripts/instantiations/: Color.py
scripts/read_structs/: read_structs.py
sphinx/: Makefile  conf.py  make.bat
sphinx/source/: index.rst
src/: fcolor.pyx  main.c  main.cpp  main.pyx  setup.py  tada.pyx  tdsp.pyx  tests.cpp  timedata.pyx
src/cpp/: tests.cpp
src/fcolor/: Color.pyx  ColorModel.cpp  ColorModel.h  ColorName.h  Combine.cpp  Expand.h  FColor.cpp  FColor.h  FColorList.pyx  FastTrig.cpp  HSB.cpp  HSB.h  Insert.h  Math.h  Mirror.cpp  RGB.h  Recolumn.h  Recolumn.pyx  Rows.h  Rows.pyx  Scroll.cpp  Scroll.pyx  Tile.cpp  Tile.h  Tile.pyx  Transform.cpp  Transform.h  inl.h
src/tdsp/: inl.h
tada/: ColorList_test.py  Color_test.py  Operations_test.py  __init__.py  tiny_benchmark.py
tada_build/: debug_templates.py  generate_files.py  make_from_parts.py  make_generated_classes.py  new_templates.py  old_templates.py  read_templates.py  run_all.sh  template.py  template_variables.py
tada_build/instantiations/: Base.py  Color.py  Color255.py  Color256.py  ColorBase.py  ColorList.py  (+5 more)
tada_tests/: ColorList_test.py  Color_test.py  Driver.py  General_test.py  Generated_test.py  Operations_test.py  README.md  __init__.py  benchmarks.py
tdsp/: ColorList_test.py  Color_test.py  Driver.py  General_test.py  Generated_test.py  Operations_test.py  README.md  __init__.py  tiny_benchmark.py
timedata_build/: generate.py  make_from_parts.py  old_templates.py  templates.py  util.py
timedata_tests/: ColorList_test.py  General_test.py  README.md  benchmarks.py
(+579 files in other folders)
