[metadata]
description-file = README.md

[build_sphinx]
source-dir = sphinx
build-dir  = build
all_files  = 1

[upload_sphinx]
upload-dir = build/html

[timedata_flags]
benchmark_number = 100
benchmark_size = 10240
benchmarks = lists,pure_python
buildtype = o3
compileropt = -ffast-math
              -flto
              -fno-math-errno
              -fomit-frame-pointer
              -funroll-loops

#              -fprofile-generate
#              -ftree-vectorize
# See http://ithare.com/c-performance-common-wisdoms-and-common-wisdoms/

models =
name =
tiny = False
annotate = False
minimum_python_version = 3.4
test_pattern=*_test.py

[timedata_dependencies]
develop = generate
build_ext = generate
build_sphinx = develop
test = develop
copy_documentation = build_sphinx
push_sphinx = copy_spinx

[timedata_build_options]
o2 = -O2 -DNDEBUG
o3 = -O3 -DNDEBUG
debug = -O0 -DDEBUG

[timedata_directories]
# A list of directories to delete in the clean phase.
build = build

# The directories containing the sphinx generated html code.
sphinx = %(build)s/html

# The address of the parallel directory containing the documentation tree.
documentation = ../timedata-org.github.io

[timedata_compiler_flags]
linux = -std=c++11
        -ferror-limit=100
        -DCOMPILE_TIMESTAMP="$time"
        -DGIT_TAGS="$git_tags"
        -Wall
        -Wextra
        -Wpedantic
        -Wno-unused-function
        -Wno-extended-offsetof

darwin = %(linux)s
         -mmacosx-version-min=10.9
         -Wno-tautological-constant-out-of-range-compare

windows = -DNDEBUG
          -DWINDOWS
          /Dand=&&
          /Dnot=!
          /Dnot_eq=!=
          /Dor=||
          /Duint=size_t
          /wd4800

[timedata_setuptools]
name = timedata
packages = [src/py/timedata_tests]
version = 0.8
keywords = [color cython dsp C++]
description = High-performance arithmetic for RGB color and for time data
              in general.
author = Tom Swirly
author_email = tom@swirly.com
url = https://github.com/rec/timedata
test_suite = setup.test_suite
download_url = https://github.com/rec/timedata/releases/tag/v0.8
